refs #0 HttpRequest 클래스 생성

--- a/easyLog.vcproj
+++ b/easyLog.vcproj
@@ -179,6 +179,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\HttpRequest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
 			</File>
